[package]
name = "polza-models"
version = "0.1.0"
authors = ["mexus <null@mexus.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
dioxus-i18n = "0.4.3"
reqwest = { version = "0.12.24", features = ["json"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting", "macros", "serde"] }
unic-langid = { version = "0.9", features = ["macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-console = "0.3"
gloo-storage = "0.3"
gloo-timers = "0.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Clipboard", "Navigator", "Window"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[dev-dependencies]
